crates/data-dict/tests/snapshots/validate_spec__non_string_glossary_value.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
glossary:
  term: 42
────────────────────────────────────────
error: [Q-1-11]
 --> dict.yaml:4:9
  |
4 |   term: 42
  |         ^^ Expected string, got integer
  |
  = help: Ensure the value is a string (quoted if it contains special characters)?
